feat(auth): Login handler added
